# docs/swagger.json
@@ -19,11 +19,8 @@
         "/characters/{movie_id}": {
             "get": {
                 "description": "Get all characters in a movie",
-                "consumes": [
-                    "application/json"
-                ],
                 "tags": [
-                    "Movies"
+                    "Characters"
                 ],
                 "summary": "Get all characters in a movie",
                 "parameters": [
@@ -111,9 +108,6 @@
         "/comments/{movie_id}": {
             "get": {
                 "description": "Get all comments for a movie",
-                "consumes": [
-                    "application/json"
-                ],
                 "tags": [
                     "Comments"
                 ],
@@ -205,7 +199,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Movies"
+                    "Comments"
                 ],
                 "summary": "Add a comment to a movie",
                 "parameters": [
@@ -287,9 +281,6 @@
         "/movies": {
             "get": {
                 "description": "Get all movies",
-                "consumes": [
-                    "application/json"
-                ],
                 "tags": [
                     "Movies"
                 ],
@@ -371,18 +362,6 @@
         }
     },
     "definitions": {
-        "gorm.DeletedAt": {
-            "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
         "model.Character": {
             "type": "object",
             "properties": {
@@ -400,25 +379,22 @@
         "model.Comment": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "created_at": {
                     "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "id": {
                     "type": "string"
                 },
-                "ipv4Addr": {
+                "ipv4_addr": {
                     "type": "string"
                 },
                 "message": {
                     "type": "string"
                 },
-                "swapiMovieID": {
+                "swapi_movie_id": {
                     "type": "integer"
                 },
-                "updatedAt": {
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -450,17 +426,20 @@
             "type": "object",
             "properties": {
                 "comment_count": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 10
                 },
                 "id": {
                     "type": "integer",
                     "example": 1
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "A New Hope"
                 },
                 "opening_crawl": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory against the evil Galactic Empire."
                 }
             }
         }
